--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+body{
+  position: static;
   text-align: center;
+  background-color: #0d0c2e;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.bg{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: relative;
+  background-color: #23323B;
+  width: 400px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  opacity: 0.4;
+  border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  display: inline-flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn > button{
+  width: 180px;
+  margin-top:10px;
+  height: 50px;
+}
+
+.form_design{
+  display: block;
+}
+.form_design > input{
+  margin-left: auto;
+  margin-right: auto;
+  height: 40px;
+  width: 300px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.form_design > button{
+  width: 300px;
+  height: 40px;
+  margin-top: 10px;
 }
